# batched-renderer-android

./: .gitmodules  gradlew.bat  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jae/batched_renderer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/clustered_mesh/: mesh_data.json
app/src/main/cpp/: AndroidOut.cpp  CMakeLists.txt  batched_renderer_app_state_manager.cpp  batched_renderer_app_state_manager.h  main.cpp
app/src/main/cpp/batched_renderer/: BatchedRenderer.cpp  BatchedRenderer.h
app/src/main/cpp/batched_renderer/inc/: AppStateManager.h  BatchedRenderer.h  DisplayManager.h
app/src/main/cpp/batched_renderer/inc/AppStateManager/: AppStateManager.h
app/src/main/cpp/batched_renderer/inc/Batcher/: Batcher.h
app/src/main/cpp/batched_renderer/inc/Camera/: Camera.h
app/src/main/cpp/batched_renderer/inc/ClusterGenerator/: cluster-generator.h
app/src/main/cpp/batched_renderer/inc/DisplayManager/: DisplayManager.h
app/src/main/cpp/batched_renderer/inc/Shader/: Shader.h
app/src/main/cpp/batched_renderer/shader/: compile_shaders.sh  default.vs.spv
app/src/main/cpp/batched_renderer/shader/binary/: default.fs.h  default.vs.h
app/src/main/cpp/batched_renderer/shader/glsl/: default.fs.glsl  default.vs.glsl
app/src/main/cpp/batched_renderer/src/: AppStateManager.cpp  BatchedRenderer.cpp  DisplayManager.cpp
app/src/main/cpp/batched_renderer/src/AppStateManager/: AppStateManager.cpp
app/src/main/cpp/batched_renderer/src/Batcher/: Batcher.cpp
app/src/main/cpp/batched_renderer/src/Camera/: Camera.cpp
app/src/main/cpp/batched_renderer/src/ClusterGenerator/: cluster-generator.cpp
app/src/main/cpp/batched_renderer/src/DisplayManager/: DisplayManager.cpp
app/src/main/cpp/batched_renderer/src/Shader/: Shader.cpp
app/src/main/cpp/forward_renderere/: Renderer.cpp  Shader.cpp  TextureAsset.cpp  Utility.cpp
app/src/main/java/com/jae/batched_renderer/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jae/batched_renderer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
